# Change Log
[Chili Bullet Weapons](https://iunius118.github.io/ChiliBulletWeapons/).
[Source](https://github.com/Iunius118/ChiliBulletWeapons).

## [Unreleased]
### Added
- Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.

## [1.1.0]
- Require Minecraft 1.20.1 and Forge 47.2.0+.

### Added
- Chili bullet gun with bayonet.

### Changed
- Rename `Chili Pepper Seeds` to `Chili Pepper Seeds (CBW)`.
- Change gun item textures.

## [1.0.2]
- Require Minecraft 1.20.1 and Forge 47.2.0+.

### Changed
- Change mod icon.

### Fixed
- Fix ammo consumption when loading machine gun.

## [1.0.1]
- Backport to 1.20.1 Forge.
- Require Minecraft 1.20.1 and Forge 47.2.0+.