@@ -1,2 +1,2 @@
-// 1.20.1	2024-02-16T23:46:51.0029433	Sound Definitions
-4ccbd3ca7a19beb013161938768aec8735b275f8 assets/chilibulletweapons/sounds.json
+// 1.20.1	2024-03-12T22:51:12.2282041	Sound Definitions
+400385a8a8b36d091bdc143c0538d6b8c2d4723c assets/chilibulletweapons/sounds.json
