@@ -1,6 +1,5 @@
-// 1.20.1	2024-03-04T20:23:07.3160708	Recipes
+// 1.20.1	2024-03-12T23:21:32.9374491	Recipes
 4b4d517a9d089ca8364caa37e6af046036ac7e4b data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun.json
-69d766b801d4696be5dc354a707d441975772e1f data/chilibulletweapons/advancements/recipes/combat/bayoneted_gun_upgrading.json
 7ffa02ab3daf2efe7cf0743d694a8c87bed270f0 data/chilibulletweapons/advancements/recipes/combat/chili_bullet.json
 d1033981031f8108c90e0d28a3154715009e80b8 data/chilibulletweapons/advancements/recipes/combat/gun.json
 9d06cf0b2822a10a7d5b9e74aac2c9b2836b485d data/chilibulletweapons/advancements/recipes/food/chili_chicken_sandwich.json
@@ -17,8 +16,10 @@ fee57ccdc1c2f5d8c2711443669e7995e89bfb16 data/chilibulletweapons/advancements/re
 6904bee18322e0ade707fede6c168b64b82dbe23 data/chilibulletweapons/advancements/recipes/misc/chili_seeds.json
 40e18cc0a17d041ffbd48812d4a9728596490fb2 data/chilibulletweapons/advancements/recipes/misc/curved_chili_from_sack.json
 b58a0a46d99b0f79ef821eafacf3fab98e3a5382 data/chilibulletweapons/advancements/recipes/misc/curved_chili_sack.json
-66122f0136e1a4144fd06d078d817860808ff3d2 data/chilibulletweapons/recipes/bayoneted_gun.json
-effeb35e01257e8c2751582cd9e40a2fce7b05db data/chilibulletweapons/recipes/bayoneted_gun_upgrading.json
+db3441ed35ad35457236f7873bece73b8ebaf1e0 data/chilibulletweapons/advancements/recipes/misc/upgrade_gun_barrel.json
+5a686d6a62d769a635d297066f461197432342d8 data/chilibulletweapons/advancements/recipes/misc/upgrade_gun_bayonet.json
+b719a0632a37843de03f1e623dfbdfba8e341a92 data/chilibulletweapons/advancements/recipes/misc/upgrade_gun_mechanism.json
+1d91fd9155ba194bbf131a505e6f792815778d9c data/chilibulletweapons/recipes/bayoneted_gun.json
 60dbca9953956dbf28cd3b6c59b4e37a30c4f693 data/chilibulletweapons/recipes/bullet_chili_from_sack.json
 97235932162f4d9cb93806ef85c7e89775247963 data/chilibulletweapons/recipes/bullet_chili_sack.json
 f51652659b03401db01b010acc39813e271175fe data/chilibulletweapons/recipes/chili_bullet.json
@@ -35,3 +36,6 @@ eb6a06d71e7be557d85bf5852e04a2adf9eebff4 data/chilibulletweapons/recipes/gun.jso
 6f04924eb5cab5df25e6f14a322f73eac6cd8c55 data/chilibulletweapons/recipes/half_chili_fish_sandwich.json
 c9eb6fc1aaf6e4a3958cb9943b69cd5d83532a11 data/chilibulletweapons/recipes/half_chili_meat_sandwich.json
 8aa81d3a29d5aeb0990237761feb65a891374c2f data/chilibulletweapons/recipes/half_chili_potato_sandwich.json
+7227b19466cb1e8d3b569f75575d5bc42e036114 data/chilibulletweapons/recipes/upgrade_gun_barrel.json
+c59415b55c308ea89a904e62360f000c9ee1dfbf data/chilibulletweapons/recipes/upgrade_gun_bayonet.json
+b04c39be6df5ecc16fc4d9ede036111159a85180 data/chilibulletweapons/recipes/upgrade_gun_mechanism.json
