@@ -1,2 +1,2 @@
-// 1.20.1	2024-03-04T20:23:07.3354506	Languages: en_us
-98f99d7c4e61a9fc6e83d84d428bc365f6f33666 assets/chilibulletweapons/lang/en_us.json
+// 1.20.1	2024-03-12T22:51:12.2262049	Languages: en_us
+1afa19035fb983d2199bb2713aedc823b14cb174 assets/chilibulletweapons/lang/en_us.json
