@@ -5,6 +5,10 @@
 ## [Unreleased]
 ### Added
 - Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.
+- Gun upgrade system and upgrade parts.
+
+### Removed
+- Smithing table recipe for gun with bayonet.
 
 ## [1.1.0]
 - Require Minecraft 1.20.1 and Forge 47.2.0+.
